--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio - Clara Fadda</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">Clara Fadda</div>
+            <ul class="nav-links">
+                <li><a href="#home">Accueil</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="home" class="hero">
+        <h1>Bienvenue sur mon portfolio</h1>
+        <p>Étudiante développeuse — passionnée par l'IA, les systèmes complexes et le développement logiciel.</p>
+        <a href="#projects" class="cta">Voir mes projets</a>
+    </section>
+
+    <section id="projects" class="projects-section">
+        <h2>Mes projets</h2>
+        <div class="projects-grid">
+            <div class="project-card">
+                <h3>Projet 1</h3>
+                <p>Description rapide du projet...</p>
+            </div>
+            <div class="project-card">
+                <h3>Projet 2</h3>
+                <p>Description rapide du projet...</p>
+            </div>
+            <div class="project-card">
+                <h3>Projet 3</h3>
+                <p>Description rapide du projet...</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about-section">
+        <h2>À propos</h2>
+        <p>Quelques lignes sur moi, mon parcours, mes intérêts...</p>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <h2>Contact</h2>
+        <p>N'hésite pas à me contacter !</p>
+        <a href="mailto:clara.fadda@example.com" class="cta">Envoyer un email</a>
+    </section>
+
+    <footer>
+        <p>© 2025 Clara Fadda — Tous droits réservés.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
