--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
 
 
     <div class="flex flex-col items-center gap-6">
-      <a href="mailto:clara.fadda@email.com"
+      <a href="mailto:cl.fadda@gmail.com"
         class="px-8 py-3 rounded-full bg-marine text-white hover:bg-poudre hover:text-marine transition">
         M’envoyer un email
       </a>
 
 
       <div class="flex gap-6 text-sm">
-        <a href="#" class="hover:text-poudre">LinkedIn</a>
-        <a href="#" class="hover:text-poudre">GitHub</a>
+        <a href="https://www.linkedin.com/in/clara-fadda/" class="hover:text-poudre">LinkedIn</a>
+        <a href="https://github.com/Clarafadda" class="hover:text-poudre">GitHub</a>
         <a href="assets/CV Clara FADDA.pdf" class="hover:text-poudre">Télécharger mon CV</a>
       </div>
     </div>
