--- a/english.html
+++ b/english.html
@@ -34,11 +34,11 @@
 
       <!-- Navigation -->
       <nav class="hidden md:flex gap-8 text-sm font-medium">
-        <a href="#projets">Projets</a>
-        <a href="#competences">Compétences</a>
-        <a href="#parcours">Parcours</a>
+        <a href="#projets">Projects</a>
+        <a href="#competences">Skills</a>
+        <a href="#parcours">Education</a>
         <a href="#contact">Contact</a>
-        <a href="english.html">En</a>
+        <a href="index.html">Fr</a>
       </nav>
 
       <!-- Bouton menu mobile -->
@@ -53,9 +53,9 @@
     
     <!-- Menu mobile -->
     <div id="mobile-menu" class="hidden fixed inset-0 bg-white z-40 flex flex-col items-center justify-center gap-8 text-xl font-medium">
-    <a href="#projets" class="hover:text-poudre">Projets</a>
-    <a href="#competences" class="hover:text-poudre">Compétences</a>
-    <a href="#parcours" class="hover:text-poudre">Parcours</a>
+    <a href="#projets" class="hover:text-poudre">Projects</a>
+    <a href="#competences" class="hover:text-poudre">Skills</a>
+    <a href="#parcours" class="hover:text-poudre">Education</a>
     <a href="#contact" class="hover:text-poudre">Contact</a>
     </div>
     
@@ -79,22 +79,22 @@
         Clara Fadda
       </h1>
       <p class="text-lg md:text-xl text-gray-600 mb-8">
-        Creative Technologist • Ingénieure • Innovation • Produit
+        Creative Technologist • Engineer • Innovation • Product
       </p>
 
       <p class="max-w-2xl mx-auto text-gray-700 mb-10">
-        Ingénieure en Creative Technology, à la croisée entre développement logiciel, produit et innovation.
-        Je mène des projets techniques de bout en bout, de la recherche à l’implémentation logicielle et matérielle.
+        Creative Technology Engineer, at the intersection of software development, product, and innovation.
+        I lead technical projects from start to finish, from research to software and hardware implementation.  
       </p>
 
       <div class="flex justify-center gap-6">
         <a href="#projets"
            class="px-6 py-3 rounded-full bg-marine text-white hover:bg-poudre hover:text-marine transition">
-          Voir mes projets
+          See my projects
         </a>
         <a href="#contact"
            class="px-6 py-3 rounded-full border border-marine hover:bg-marine hover:text-white transition">
-          Me contacter
+           Contact me
         </a>
       </div>
     </div>
@@ -186,21 +186,21 @@
   <div class="max-w-4xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-6">Contact</h2>
     <p class="text-gray-600 mb-12">
-      Une question, un projet, une opportunité ? N’hésite pas à me contacter.
+        Got a question, a project, or an opportunity? Feel free to reach out to me.
     </p>
 
 
     <div class="flex flex-col items-center gap-6">
       <a href="mailto:cl.fadda@gmail.com"
         class="px-8 py-3 rounded-full bg-marine text-white hover:bg-poudre hover:text-marine transition">
-        M’envoyer un email
+        Send me an email
       </a>
 
 
       <div class="flex gap-6 text-sm">
         <a href="https://www.linkedin.com/in/clara-fadda/" class="hover:text-poudre">LinkedIn</a>
         <a href="https://github.com/Clarafadda" class="hover:text-poudre">GitHub</a>
-        <a href="assets/CV Clara FADDA.pdf" class="hover:text-poudre">Télécharger mon CV</a>
+        <a href="assets/CV Clara FADDA English.pdf" class="hover:text-poudre">Download my resume</a>
       </div>
     </div>
   </div>
