--- a/index.html
+++ b/index.html
@@ -364,8 +364,7 @@
 
      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100" 
-           data-category="ai"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"           data-category="ai"
            data-title="Rédacteur Multi-Agents LLM"
            data-tags="NLP,LLM,Python,LangChain"
            data-github="https://github.com/Clarafadda/LLM-Research-Assistant/" 
@@ -373,11 +372,11 @@
            data-desc="Architecture autonome pour la rédaction de revues de littérature scientifique."
            data-full-desc="Développement d'une architecture complexe utilisant plusieurs agents autonomes (LLM). Un agent 'Chercheur' extrait les données via API (ArXiv, etc.), un agent 'Synthétiseur' structure l'information, et un agent 'Éditeur' affine le style scientifique. Ce projet explore les limites de l'IA générative dans le domaine académique pour automatiser la veille technologique."
            data-image="assets/Image Agent LLM.png">
-        <div class="h-48 bg-indigo-50 relative border-b border-gray-100 overflow-hidden">
+        <div class="h-48 bg-purple-50 relative border-b border-gray-100 overflow-hidden">
           <img src="assets/Image Agent LLM.png" alt="AI Agents" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Rédacteur Multi-Agents</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Rédacteur Multi-Agents LLM</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Architecture autonome pour la rédaction de revues de littérature scientifique.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">NLP</span>
@@ -388,7 +387,7 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="ai"
-           data-title="Digit Recognition (MNIST)"
+           data-title="Digit Recognition"
            data-tags="Deep Learning,WebGPU,CNN,Python"
            data-github="https://github.com/Clarafadda/TinyGrad_MNIST_Classifier"
            data-demo="https://clarafadda.github.io/TinyGrad_MNIST_Classifier/"
@@ -421,7 +420,7 @@
           <img src="assets/Image Raymarching.png" alt="3D Graphics" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Éditeur Raymarching</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Éditeur de Scènes 3D</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Moteur de rendu et éditeur interactif basé sur le Raymarching.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">WGSL</span>
@@ -453,7 +452,7 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="product"
-           data-title="Campagne Kickstarter"
+           data-title="Campagne Kickstarter Orika"
            data-tags="Crowdfunding,Design Produit,Marketing,Logistique"
            data-desc="Lancement d'un portefeuille origami en cuir français."
            data-full-desc="Gestion de projet complète pour le lancement d'un produit : de la conception d'un portefeuille minimaliste en cuir plié (origami) à la campagne marketing sur Kickstarter. Réussite de la collecte, gestion de la production et de la logistique d'expédition aux contributeurs."
@@ -462,7 +461,7 @@
           <img src="assets/Image Kickstarter.png" alt="Leather Wallet" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Portefeuille Origami</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Campagne Kickstarter Orika</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Lancement d'un portefeuille origami en cuir français.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Marketing</span>
@@ -473,16 +472,17 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="data"
-           data-title="Airbnb Price Prediction"
+           data-title="Prediction des prix Airbnb"
            data-tags="Python,Pandas,Scikit-Learn,Data Viz"
            data-desc="Modèle prédictif pour l'estimation des prix de location."
            data-full-desc="Projet complet de Data Science : nettoyage d'un jeu de données brut Airbnb, analyse exploratoire (EDA) pour identifier les corrélations, et entraînement de modèles de Machine Learning (Random Forest, XGBoost) pour prédire le prix optimal d'une nuitée selon les caractéristiques du logement."
+           data-docs="assets/Projet_ADD_Clara_FADDA_Lucas_STALTER-3.ipynb"
            data-image="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80">
         <div class="h-48 bg-red-50 relative border-b border-gray-100 overflow-hidden">
           <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=800&q=80" alt="Data Analysis" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Airbnb Prediction</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Prediction des prix Airbnb</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Modèle prédictif pour l'estimation des prix de location.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">Python</span>
@@ -493,7 +493,7 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="data"
-           data-title="TransConnect Logistics"
+           data-title="Logistique TransConnect"
            data-tags="C#,SQL,Algorithmes,Graphes"
            data-desc="Logiciel d'optimisation de trajets de livraison."
            data-full-desc="Développement d'une application desktop en C# pour une entreprise de logistique. Le cœur du projet réside dans l'utilisation de la théorie des graphes (Algorithmes de Dijkstra et Floyd-Warshall) pour calculer les itinéraires les plus courts et optimiser la flotte de camions."
@@ -502,7 +502,7 @@
           <img src="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=800&q=80" alt="Logistics" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">TransConnect</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Logistique TransConnect</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Logiciel d'optimisation de trajets de livraison via graphes.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">C#</span>
@@ -522,7 +522,7 @@
           <img src="https://images.unsplash.com/photo-1485965120184-e220f721d03e?w=800&q=80" alt="Database" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Gestion BDD Vélo</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Gestion BDD - Magasin Vélo</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Architecture SQL et application de gestion commerciale.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">SQL</span>
@@ -533,11 +533,11 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="product"
-           data-title="Collection Maker (HMAA)"
+           data-title="Collection Maker"
            data-tags="Électronique,Arduino,Soudure,Impression 3D"
            data-desc="Série de projets hardware et DIY."
            data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, modification d'un signal vidéo (VGAX) via électronique, et conception d'une flûte de pan imprimée en 3D et accordée."
-           data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation HMAA"},{"url":"https://example.com/doc2","label":"Guide Technique"}]'
+           data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation Modélisation & Impression 3D"},{"url":"https://bow-chalk-0b1.notion.site/HMAA-Week-3-Process-images-2dfcb55dd23580b585add97a6f65caca","label":"Documentation PCB & VGAx"}]'
            data-image="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80">
         <div class="h-48 bg-green-50 relative border-b border-gray-100 overflow-hidden">
           <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="DIY Electronics" class="project-image group-hover:scale-110 transition-transform duration-500">
