--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
            data-tags="Crowdfunding,Design Produit,Marketing,Logistique"
            data-desc="Lancement d'un portefeuille origami en cuir français."
            data-full-desc="Gestion de projet complète pour le lancement d'un produit : de la conception d'un portefeuille minimaliste en cuir plié (origami) à la campagne marketing sur Kickstarter. Réussite de la collecte, gestion de la production et de la logistique d'expédition aux contributeurs."
-           data-image="assets/Image kickstarter.png">
+           data-image="assets/Image Kickstarter.png">
         <div class="h-48 bg-orange-50 relative border-b border-gray-100 overflow-hidden">
           <img src="assets/Image Kickstarter.png" alt="Leather Wallet" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
