--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
       <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100"
            data-category="product"
-           data-title="Collection Maker"
+           data-title="Design & Conception"
            data-tags="Électronique,Arduino,Soudure,Impression 3D"
            data-desc="Série de projets hardware et DIY."
            data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, modification d'un signal vidéo (VGAX) via électronique, et conception d'une flûte de pan imprimée en 3D et accordée."
@@ -543,7 +543,7 @@
           <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="DIY Electronics" class="project-image group-hover:scale-110 transition-transform duration-500">
         </div>
         <div class="p-6">
-          <h3 class="text-xl font-bold mb-2 text-marine">Collection Maker</h3>
+          <h3 class="text-xl font-bold mb-2 text-marine">Design & Conception</h3>
           <p class="text-gray-600 text-sm mb-4 line-clamp-2">Série de projets hardware : Gameboy, VGAX, Impression 3D.</p>
           <div class="flex flex-wrap gap-2">
             <span class="text-xs bg-poudre text-marine px-2 py-1 rounded font-medium">DIY</span>
